Menu Overflow - partial fix

--- a/css/touch.css
+++ b/css/touch.css
@@ -573,3 +573,6 @@ figure {
 .ul-menu {
 	width: 100%;
 }
+.nestedsidemenu ul li ul li a {
+	padding: 4px;
+}
